--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
 
         <div class="col-25">
-            <form name="myForm" onsubmit="return validateForm()">
+            <form name="myForm" onsubmit="return validateForm()" action="post">
                 <div>
                     <h4 class="heading-form">Contact Us</h4>
                     <p>Sales akan menghubungi anda 1x24 Jam setelah data kami terima.</p>
@@ -260,7 +260,7 @@
             </div>
             <div>
                 <ul>
-                    <li>copyright 2024</li>
+                    <li>&copy;2024</li>
                     <li>Yuri Prayitno</li>
                 </ul>
             </div> 
